--- a/ProvaTecnicaFox/appsettings.json
+++ b/ProvaTecnicaFox/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnectionString": ";",
+    "SqlLiteConnectionString": "Data Source=c:\\sqllite\\TestFox.db;"
+
+  }
 }
