--- a/ProvaTecnicaFox/appsettings.json
+++ b/ProvaTecnicaFox/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=appDb;Initial Catalog=ProvaTecnicaFoxSqlDb;Persist Security Info=False;User ID=sa;Password=Password12!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SqlConnectionString": ";",
+    "SqlLiteConnectionString": "Data Source=c:\\sqllite\\TestFox.db;"
 
   }
 }
