--- a/ProvaTecnicaFox.Core/ProvaTecnicaFox.Core.csproj
+++ b/ProvaTecnicaFox.Core/ProvaTecnicaFox.Core.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Migrations\SqlMigrations\" />
   </ItemGroup>
 
 </Project>
